[gd_scene load_steps=3 format=3 uid="uid://84a0wyqd3bgc"]

[ext_resource type="Script" path="res://scenes/menu/pause/pause.gd" id="1_b2uc6"]
[ext_resource type="Texture2D" uid="uid://bnnvjny77vqtq" path="res://assets/art_assets/PauseMenySkisse.png" id="2_ya13x"]

[node name="Pause" type="Node"]
script = ExtResource("1_b2uc6")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1600.0
offset_bottom = 720.0
texture = ExtResource("2_ya13x")
expand_mode = 2

[node name="ResumeButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 142.0
offset_top = 88.0
offset_right = 611.0
offset_bottom = 201.0
rotation = -0.0207265

[node name="SettingsButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 165.0
offset_top = 271.0
offset_right = 612.0
offset_bottom = 379.0
rotation = 0.0587404

[node name="QuitButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 168.0
offset_top = 496.0
offset_right = 605.0
offset_bottom = 606.0
rotation = -0.0584783

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
